# vx

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/cglm/: .travis.yml  CREDITS  LICENSE  Makefile.am  appveyor.yml  cglm.pc.in  cglm.podspec  configure.ac
lib/cglm/.github/: FUNDING.yml
lib/cglm/docs/source/: affine-mat.rst  affine.rst  api.rst  bezier.rst  box.rst  build.rst  call.rst  cam.rst  color.rst  conf.py  curve.rst  euler.rst  features.rst  frustum.rst  getting_started.rst  index.rst  io.rst  mat3.rst  mat4.rst  opengl.rst  opt.rst  plane.rst  project.rst  quat.rst  sphere.rst  troubleshooting.rst  util.rst  vec3-ext.rst  vec3.rst  vec4-ext.rst  vec4.rst
lib/etc/: debug_break.h
lib/etc/parson/: Makefile
lib/glad/glad/: __init__.py  __main__.py  parse.py
lib/glad/glad/files/: egl.xml  gl.xml  glx.xml  wgl.xml
lib/glad/glad/lang/c/: generator.py
lib/glad/glad/lang/common/: generator.py
lib/glad/glad/lang/nim/loader/: gl.py
lib/glfw/docs/: Doxyfile.in
lib/glfw/src/: cocoa_window.m
lib/imgui/examples/: imgui_impl_metal.mm  imgui_impl_osx.mm
lib/imgui/examples/example_apple_opengl2/: main.mm
lib/imgui/examples/example_apple_opengl2/example_apple_opengl2.xcodeproj/: project.pbxproj
lib/imgui/examples/example_emscripten/: Makefile
lib/imgui/examples/example_glfw_metal/: Makefile  main.mm
lib/imgui/examples/example_glfw_opengl2/: Makefile
lib/imgui/examples/example_glfw_opengl3/: Makefile
lib/imgui/examples/example_glut_opengl2/: Makefile
lib/imgui/examples/example_null/: Makefile
lib/imgui/examples/example_sdl_opengl2/: Makefile
lib/imgui/examples/example_sdl_opengl3/: Makefile
lib/imgui/examples/example_win32_directx10/: example_win32_directx10.vcxproj
lib/imgui/examples/example_win32_directx11/: example_win32_directx11.vcxproj
lib/remotery/: .appveyor.yml  .travis.yml
lib/remotery/typescript/: DOM.ts  DOM_Node.ts  Hash.ts  Math.ts  Test.ts  WM_Container.ts  WM_Control.ts  WM_ControlGraph.ts  WM_ControlSizer.ts  WM_ControlSnapper.ts  WM_Panel.ts  WM_PanelContainer.ts  WM_PanelGraph.ts  WM_PanelSizer.ts  WM_Ruler.ts  WM_Serialisation.ts  WM_Window.ts
old/asset_loader/: asset_loader.h
old/renderer/: program.h  texture.c  texture.h
run/models/Landscape 1/: README.txt  scene.gltf
run/shaders/: default.frag  default.vert  final.frag  fullscreen.vert  fwd_opaque.frag  fx_dither.frag  gbuf_light_main.frag  gbuf_light_point.frag  gbuf_lighting.frag  gbuf_main.frag  gen_cubemap.frag  shadow.frag  shadow.vert  shadow_resolve.frag  skybox.frag  skybox.vert  taa.frag
run/userdata/scenes/: Default.vxscene  Landscape Sponza.vxscene  Landscape Test 1.vxscene  Landscape Test 2.vxscene  Screenshot Licenta 1.vxscene  Screenshot Licenta 2.vxscene  Sponza 2.vxscene  Sponza.vxscene  Sponza2.vxscene
scripts/: build.ps1  build.sh  renderdoc.cap
src/: assets.h  common.c  common.cc  common.h  gltf.c  gltf.h  gui.cc  gui.h  main.c  main.cc  main.h
src/asset_loader/: asset_loader.c
src/data/: camera.c  camera.cc  camera.h  model.c  model.h  texture.c  texture.cc  texture.h
src/flib/: accessor.c  accessor.h  array.h  ringbuffer.h  vec.h
src/gui/: gui.cc  gui.h
src/misc/: icon_new.pdn  main.rc
src/render/: program.c  program.h  render.c  render.cc  render.h
src/renderer/: material.h  mesh.h  model.h  program.c  texture.c  texture.h
src/scene/: core.c  core.h  save.c  save.h  scene.h
